# konnect.curl

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
.github/workflows/: pages.yml
doc/: Makefile  conf.py  index.md
doc/templates/apidoc/: package.rst_t
examples/: multi-use.py
konnect/curl/: __init__.py  _enums.py  _multi.py  abc.py  requests.py  scalars.py
konnect/curl/certificates/: __init__.py  configure.py  detect.py  encodings.py
scripts/: mkstubs.py
tests/: .gitignore  sample.p12  test_certificates_set.py
