[project]
name = "konnect.curl"
version = "0.2.4"
description = "Pythonic, asynchronous interface to Curl (cURL) using `anyio`"
license = {file = "LICENCE.txt"}
readme = "README.md"

classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Topic :: Internet",
]

requires-python = "~=3.11"
dependencies = [
	"anyio ~=4.7",
	"kodo.quantities ~=0.1.1",
	"pycurl >=7.45.3, <8",
	"pyasn1",
	"pyasn1-modules",
]

[project.optional-dependencies]
docs = [
	"kodo.plugins.sphinx-docstrings ~=0.1.1",
	"myst-parser",
	"sphinx ~=9.0",
	"sphinx-rtd-theme",
]

[[project.authors]]
name = "Dom Sekotill"
email = "dom.sekotill@kodo.org.uk"

[project.urls]
Source = "https://code.kodo.org.uk/konnect/konnect.curl"
Issues = "https://code.kodo.org.uk/konnect/konnect.curl/-/issues"
Documentation = "https://docs.kodo.org.uk/konnect.curl"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["tests/"]
exclude = ["tests/.gitignore"]


[tool.isort]
force_single_line = true
line_length = 92


[tool.flakeheaven]
base = "https://code.kodo.org.uk/dom/project-templates/-/raw/main/.flakerules.toml"

[tool.flakeheaven.exceptions."examples/"]
flake8-print = ["-*"]


[tool.pyright]
pythonVersion = "3.11"
include = ["konnect", "tests"]
typeCheckingMode = "strict"
reportMissingModuleSource = "none"
reportRedeclaration = "none"
reportUnknownMemberType = "warning"
reportUnusedImport = "warning"


[tool.coverage.run]
data_file = "results/coverage.db"
branch = true
source = ["konnect"]

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
	"pragma: no-cover",
	"if .*\\b__name__\\b",
	"if .*\\bTYPE_CHECKING\\b",
	"class .*(.*\\bProtocol\\b.*):",
	"def __repr__",
	"@overload",
	"@(abc\\.)abstractmethod",
	"assert_never",
	"case .*never:",
]
partial_branches = [
	"pragma: no-branch",
	"if .*\\b__debug__\\b",
]

[tool.coverage.json]
output = "results/coverage.json"
show_contexts = true

[tool.coverage.xml]
output = "results/coverage.xml"

[tool.coverage.html]
directory = "results/coverage"
show_contexts = true
